# admin-command-center

./: .gitignore  Cargo.toml  README.md
migrations/: 202605190001_create_platform_docs.sql  202605190002_create_monitoring_tables.sql  202605200001_create_rbac_tables.sql
src/: bootstrap.rs  main.rs  telemetry_ws.rs
src/handlers/api/: control.rs
src/models/: mod.rs  monitored_services.rs  service_heartbeats.rs  system_users.rs  user_sessions.rs
src/pages/: dashboard.rs  register.rs
src/pages/auth/login/: index.rs  post.rs
src/pages/auth/register/: index.rs  post.rs
src/pages/docs/: [..path].rs
src/pages/login/: get.rs  post.rs
src/root/: layout.rs
src/security/: crypto.rs  mod.rs  rbac.rs
src/workers/: monitor.rs
static/: style.css
static/css/: style.css
