[package]
name = "pppp"
version = "0.1.0"
edition = "2024"

[dependencies]
gritshield = { path = "../gritshield" } # Pointing locally for now, change to version later
tokio = { version = "1.0", features = ["full"] }
maud = "0.25"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
